﻿
Burntime v0.3 (2023-09-24)

* Updated to .NET 7
* Enabled fullscreen
* Included original graphics package - no original game install is required anymore
* Added no AI toggle to start menu
* Added extended game mode to start menu
* Center maps when they are smaller than the screen
* Enlarged very small locations to fill 16:9 screens

Burntime v0.2.3 (2015-5-30)

* Added exit button to the main menu
* Fixed issue with AI getting stuck after a while
* Fixed 9 food with maggots issue
* Added cheats to the Launcher
* Fixed some NPC selection and path finding issues
* Paper helmet now protects only 20% radiation and gas
* updated code to work with .NET 4.5
known issues:
* fullscreen does not work with Windows 8 / 10

Burntime v0.2.2 (2011-11-13)

* Fixed missing walkable info for new tiles
* Fixed item numbers in info screen.

Burntime v0.2.1 (2011-11-13)

* Blocked 8 pixel borders on map for NPCs and items
* Improved ranges for entering rooms in a group
* Axe and pitchfork increase maggots production
* Rat trap and trap construction hint now visible when at least one item is available
* Fixed mouse over issue in technician dialog

Burntime v0.2 (2011-10-24)

* Increased size of all other maps to fit screen size
* Added a small gap in the Monastry's walls on the east side
* Fixed glitch in intro video

Burntime v0.1.5 (2011-10-22)

* Removed outdated pages and Deluxe from Launcher
* Increased size of Hard Mans Death to fit screen size

Burntime v0.1.4 (2011-10-20)

* Changed screen ratio from 8:5 to 4:3
* Merged versions/packages into one

Burntime Classic v0.1.3 (2011-10-18)

* Increased resolution
* Added widescreen support
* crash when entering location where AI player died fixed

Burntime Classic v0.1.2.1 (2009-09-08)

* Fixed eating in rooms (again)
* Fixed AI crash when hiring NPCs
* Completed high-res font

Burntime Classic v0.1.2 (2009-09-06)

* Fixed eating/drinking with full food/water when right-clicking on an item in rooms