@@ -238,24 +238,28 @@ class=useless
 burngfx=52
 
 [item_leather_jacket]
-class=useless
+class=protection
 burngfx=53
+defense=1
 
 [item_tires]
 class=useless
 burngfx=54
 
 [item_steel_helmet]
-class=useless
+class=protection
 burngfx=55
+defense=1
 
 [item_sweater]
-class=useless
+class=protection
 burngfx=56
+defense=1
 
 [item_pants]
-class=useless
+class=protection
 burngfx=57
+defense=1
 
 [item_dogshit]
 class=useless nodrop
